Fix logo overlapping username field

--- a/stylings/login.css
+++ b/stylings/login.css
@@ -9,9 +9,9 @@ h1, h3 {
     margin: 0;
 }
 
-
 .logo {
     margin: -8rem 0 -5rem 0;
+    pointer-events: none;
 }
 .logo img {
     width: 30rem;
